@@ -13,6 +13,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #19542: Fix bugs in WeakValueDictionary.setdefault() and
+  WeakValueDictionary.pop() when a GC collection happens in another
+  thread.
+
 - Issue #28925: cPickle now correctly propagates errors when unpickle instances
   of old-style classes.
 
